--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0"
   }
 }
